ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: everypay
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: http
      port: 80            # порт сервиса внутри кластера
      targetPort: http    # именованный порт nginx-контейнера (80), nginx проксирует в app:8000
      nodePort: 30800     # внешний порт на каждом узле: http://192.168.10.201:30800
