ops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: everypay
  labels:
    app: web
spec:
  ingressClassName: nginx
  rules:
    - host: everypay.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: everypay
                port:
                  number: 80
